--- a/.gitignore
+++ b/.gitignore
@@ -1,60 +1,12 @@
-# Dependencies
 node_modules/
-__pycache__/
-*.pyc
-*.pyo
-*.pyd
-.Python
-pip-log.txt
-pip-delete-this-directory.txt
-.venv/
-venv/
-ENV/
-env/
-
-# Build outputs
 dist/
-build/
-*.egg-info/
-.next/
-out/
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-.DS_Store
-
-# Environment variables
+.build/
 .env
 .env.local
-.env.development
-.env.test
-.env.production
-*.local
-
-# Logs
-logs/
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Testing
-coverage/
-.nyc_output/
-.pytest_cache/
-
-# Docker
-docker-compose.override.yml
-
-# OS
-Thumbs.db
+*.pyc
+__pycache__/
+*.sqlite3
+learnquest.db
 .DS_Store
-
-# Misc
-*.tmp
-*.temp
-.cache/
+.vscode/
+.idea/
