--- a/package.json
+++ b/package.json
@@ -1,48 +1,19 @@
 {
-  "name": "learn-quest",
-  "version": "1.0.0",
-  "description": "AI-powered learning management system with code execution capabilities",
+  "name": "learnquest-monorepo",
   "private": true,
   "workspaces": [
     "apps/*",
     "services/*"
   ],
   "scripts": {
-    "dev": "docker-compose up",
-    "dev:web": "npm run dev --workspace=apps/web-frontend",
-    "dev:admin": "npm run dev --workspace=apps/admin-frontend",
-    "dev:api": "npm run dev --workspace=services/api",
-    "build": "npm run build --workspaces",
-    "build:web": "npm run build --workspace=apps/web-frontend",
-    "build:admin": "npm run build --workspace=apps/admin-frontend",
-    "test": "npm run test --workspaces",
-    "lint": "npm run lint --workspaces",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "clean": "npm run clean --workspaces && rm -rf node_modules",
-    "docker:up": "docker-compose up -d",
-    "docker:down": "docker-compose down",
-    "docker:build": "docker-compose build",
+    "start:api": "node services/api/src/app.js",
+    "start:web": "vite --config apps/web-frontend/vite.config.js",
+    "start:admin": "node apps/admin-frontend/src/index.js",
+    "start:worker": "node services/worker/index.js",
+    "migrate": "node scripts/migrate.js",
     "seed": "node scripts/seed-data.js"
   },
   "devDependencies": {
-    "prettier": "^3.0.0",
-    "concurrently": "^8.2.0"
-  },
-  "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=9.0.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/yourusername/learn-quest.git"
-  },
-  "keywords": [
-    "learning",
-    "education",
-    "lms",
-    "ai",
-    "code-execution"
-  ],
-  "author": "Your Name",
-  "license": "MIT"
+    "vite": "^7.1.10"
+  }
 }
