--- a/services/api/Dockerfile
+++ b/services/api/Dockerfile
@@ -1,12 +1,6 @@
 FROM node:18-alpine
-
-WORKDIR /app
-
+WORKDIR /usr/src/app
 COPY package*.json ./
-RUN npm install
-
+RUN npm install --production
 COPY . .
-
-EXPOSE 8000
-
 CMD ["node", "src/app.js"]
